<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">복약알람</string>

    <string name="hello_blank_fragment" tools:keep="@string/hello_blank_fragment">Hello blank fragment</string>

    <!-- 탭 타이틀 -->
    <string name="tab_title_list" tools:keep="@string/tab_title_list">목록</string>
    <string name="tab_title_calendar" tools:keep="@string/tab_title_calendar">일정</string>
    <string name="tab_title_analysis" tools:keep="@string/tab_title_analysis">분석</string>
    <string name="main_setting">설정</string>
    <string name="edit_title_hint" tools:keep="@string/edit_title_hint">약 이름</string>
    <string name="edit_desc_hint" tools:keep="@string/edit_desc_hint">약 설명</string>
    <string name="breakfast" tools:keep="@string/breakfast">아침</string>
    <string name="lunch" tools:keep="@string/lunch">점심</string>
    <string name="dinner" tools:keep="@string/dinner">저녁</string>
    <string name="text_date_from">언제부터</string>
    <string name="text_date_to">언제까지</string>
    <string name="checkbox_edit_morning_alarm" tools:keep="@string/checkbox_edit_morning_alarm">아침알람</string>
    <string name="checkbox_edit_afternoon_alarm" tools:keep="@string/checkbox_edit_afternoon_alarm">점심알람</string>
    <string name="checkbox_edit_dinner_alarm" tools:keep="@string/checkbox_edit_dinner_alarm">저녁알람</string>
    <string name="button_edit_submit" tools:keep="@string/button_edit_submit">만들기</string>
    <string name="main_add">약 추가</string>
    <string name="show_toolbar_title">약 정보</string>
    <string name="show_edit_action">편집</string>
    <string name="show_delete_action">삭제</string>
    <string name="show_delete_message">정말 삭제하시겠습니까? 약의 정보가 모두 삭제됩니다.</string>
    <string name="main_edit">약 편집</string>
    <string name="text_edit_title">약 이름</string>
    <string name="text_edit_title_example">약 이름을 적어주세요.</string>
    <string name="text_edit_desc">약 설명</string>
    <string name="text_edit_desc_example">약 설명을 적어주세요.</string>
    <string name="text_date">복약기간</string>
    <string name="text_alarm_select" tools:keep="@string/text_alarm_select">알람 종류</string>
    <string name="alarm_default" tools:keep="@string/alarm_default">기본</string>
    <string name="text_alarm_list">알람 목록</string>
    <string name="take_question" tools:keep="@string/take_question">약을 드셨습니까?</string>

    <string name="notification_take_medicine">복용</string>
    <string name="notification_not_take_medicine">미복용</string>
    <string name="notification_re_alarm">다시알림</string>
    <string name="notification_not_yet_take_medicine">취소</string>

    <string name="alarm_empty">여기를 눌러서\n알람을 추가해보세요!</string>
    <string name="medicine_empty">여기를 눌러서\n약을 추가해보세요!</string>
    <string name="text_alarm_limit">알람은 최대 5개까지 설정 가능합니다.</string>
    <string name="alarm_delete_question">알람을 삭제하시겠습니까?</string>
    <string name="alarm_delete_yes">삭제하기</string>
    <string name="alarm_delete_cancel">취소</string>
    <string name="close_dialog">닫기</string>
    <string name="error_date_from">언제까지의 날짜를 이후로 설정할 수 없습니다!</string>
    <string name="error_date_to">언제부터의 날짜 전으로 설정할 수 없습니다!</string>
    <string name="title_activity_settings">설정</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general" tools:keep="@string/pref_header_general">General</string>

    <string name="pref_title_alarm_switch">알람 설정</string>
    <string name="pref_description_alarm_switch">모든 알람을 켜고 끌 수 있습니다.
    </string>

    <string name="pref_title_re_alarm">다시알람 시간 설정</string>
    <string-array name="pref_re_alarm_titles">
        <item>10분</item>
        <item>20분</item>
        <item>30분</item>
        <item>40분</item>
        <item>50분</item>
        <item>1시간</item>
    </string-array>
    <string-array name="pref_re_alarm_values">
        <item>10</item>
        <item>20</item>
        <item>30</item>
        <item>40</item>
        <item>50</item>
        <item>60</item>
    </string-array>

    <string-array name="list_preference_entries" tools:keep="@array/list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values" tools:keep="@array/list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value" tools:keep="@array/multi_select_list_preference_default_value" />

    <string name="pref_title_system_sync_settings" tools:keep="@string/pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications" tools:keep="@string/pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications" tools:keep="@string/pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone" tools:keep="@string/pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate" tools:keep="@string/pref_title_vibrate">Vibrate</string>
    <string name="start_alarm_toast">알람이 %s 울립니다.</string>
    <string name="stop_alarm_toast">%s 울리는 알람을 중지합니다.</string>
    <string name="re_alarm_toast">%d분 후에 다시 알람이 울립니다.</string>

</resources>
