<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.ssangwoo.medicationalarm.views.activities.EditMedicineActivity">

    <include
        android:id="@+id/edit_toolbar"
        layout="@layout/layout_toolbar" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:counterEnabled="true"
                app:counterMaxLength="@integer/max_count_edit_title">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/text_input_edit_title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/edit_title_hint"
                    android:textSize="20sp"
                    android:textStyle="bold" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:counterEnabled="true"
                app:counterMaxLength="@integer/max_count_edit_desc">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/text_input_edit_desc"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/edit_desc_hint" />
            </android.support.design.widget.TextInputLayout>

            <LinearLayout
                android:layout_margin="16dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:text="@string/text_date_from"
                    android:textSize="24sp"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent" />
                <TextView
                    android:id="@+id/text_edit_date_from"
                    android:textSize="24sp"
                    android:textColor="@android:color/black"
                    android:layout_marginStart="16dp"
                    android:layout_marginLeft="16dp"
                    android:layout_weight="1"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content" />
            </LinearLayout>


            <LinearLayout
                android:layout_margin="16dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:text="@string/text_date_to"
                    android:textSize="24sp"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent" />
                <TextView
                    android:id="@+id/text_edit_date_to"
                    android:textSize="24sp"
                    android:textColor="@android:color/black"
                    android:layout_marginStart="16dp"
                    android:layout_marginLeft="16dp"
                    android:layout_weight="1"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:orientation="horizontal">

                <CheckBox
                    android:id="@+id/checkbox_edit_breakfast"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:padding="16dp"
                    android:text="@string/breakfast"
                    android:textSize="20sp" />

                <CheckBox
                    android:id="@+id/checkbox_edit_lunch"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:padding="16dp"
                    android:text="@string/lunch"
                    android:textSize="20sp" />

                <CheckBox
                    android:id="@+id/checkbox_edit_dinner"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:padding="16dp"
                    android:text="@string/dinner"
                    android:textSize="20sp" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/breakfast_alarm_container"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:orientation="horizontal"
                android:visibility="gone">

                <CheckBox
                    android:id="@+id/checkbox_edit_breakfast_alarm"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="16dp"
                    android:checked="true"
                    android:text="@string/checkbox_edit_morning_alarm"
                    android:textSize="20sp" />

                <TextView
                    android:id="@+id/text_edit_breakfast_alarm_time"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="16dp"
                    android:textColor="@android:color/black"
                    android:textSize="20sp" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/lunch_alarm_container"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:orientation="horizontal"
                android:visibility="gone">

                <CheckBox
                    android:id="@+id/checkbox_edit_lunch_alarm"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="16dp"
                    android:checked="true"
                    android:text="@string/checkbox_edit_afternoon_alarm"
                    android:textSize="20sp" />

                <TextView
                    android:id="@+id/text_edit_lunch_alarm_time"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="16dp"
                    android:textColor="@android:color/black"
                    android:textSize="20sp" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/dinner_alarm_container"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:orientation="horizontal"
                android:visibility="gone">

                <CheckBox
                    android:id="@+id/checkbox_edit_dinner_alarm"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checked="true"
                    android:padding="16dp"
                    android:text="@string/checkbox_edit_dinner_alarm"
                    android:textSize="20sp" />

                <TextView
                    android:id="@+id/text_edit_dinner_alarm_time"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="16dp"
                    android:textColor="@android:color/black"
                    android:textSize="20sp" />
            </LinearLayout>

            <Button
                android:id="@+id/button_edit_submit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/button_edit_submit" />
        </LinearLayout>
    </ScrollView>
</LinearLayout>
