<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="64dp"
    android:paddingLeft="16dp"
    android:paddingStart="16dp"
    android:paddingRight="16dp"
    android:paddingEnd="16dp">

    <TextView
        android:id="@+id/keep_alarm_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:text="타이틀"
        android:singleLine="true"
        android:textStyle="bold"
        android:textColor="@android:color/black"
        android:textSize="24sp" />

    <LinearLayout
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:orientation="horizontal"
        android:gravity="center_vertical"
        android:layout_width="wrap_content"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/keep_alarm_breakfast"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="8dp"
            android:text="@string/breakfast"
            android:textColor="@android:color/black"
            android:textSize="24sp" />

        <View
            android:layout_width="1dp"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:background="@color/colorPrimaryDark" />

        <TextView
            android:id="@+id/keep_alarm_lunch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="8dp"
            android:text="@string/lunch"
            android:textColor="@android:color/black"
            android:textSize="24sp" />

        <View
            android:layout_width="1dp"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:background="@color/colorPrimaryDark" />

        <TextView
            android:id="@+id/keep_alarm_dinner"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="8dp"
            android:text="@string/dinner"
            android:textColor="@android:color/black"
            android:textSize="24sp" />
    </LinearLayout>
</RelativeLayout>